--- a/style.css
+++ b/style.css
@@ -561,6 +561,7 @@ header, footer, span, a, p, article {
 	}
 	.single_article_title, .single_article_content > p, .single_article_content > a, .single_article_content .alignleft {
 		padding: 0;
+		line-height: 1.5;
 	}
 	.single_article_title {
 	    /*margin-bottom: 20px;*/
