--- a/style.css
+++ b/style.css
@@ -301,7 +301,7 @@ header, footer, span, a, p, article {
 .single_article_content p, .single_article_content div {
 	margin-bottom: 24px;
 }
-.single_article_content h2 {
+.single_article_content p > h3 {
 	margin-bottom: 12px;
 	padding: 0 10px;
 }
