--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@ header, footer, span, a, p, article {
 	float: left;
 	margin-bottom: 8px;
 }
-.single_article_content p, .single_article_content div {
+.single_article_content p {
 	margin-bottom: 28px;
 }
 .single_article_content h1, .single_article_content h2, .single_article_content h3, .single_article_content h4 {
