--- a/style.css
+++ b/style.css
@@ -636,4 +636,13 @@ header, footer, span, a, p, article {
 		margin: 0;
 		float: right;
 	}
-}
+	.single_article_content h1, .single_article_content h2, .single_article_content h3, .single_article_content h4 {
+		margin-bottom: 16px;
+		padding: 0;
+	}
+	.single_article_content h4 {
+		font-size: 26px;
+	}
+	.single_article_content p, .single_article_content div {
+		margin-bottom: 48px;
+	}
