--- a/style.css
+++ b/style.css
@@ -631,6 +631,7 @@ header, footer, span, a, p, article {
 	}
 	.alignnone {
 		margin: 0;
+		margin-bottom: 12px;
 		/*float: right;*/
 	}
 	.single_article_content h1, .single_article_content h2, .single_article_content h3, .single_article_content h4 {
