--- a/style.css
+++ b/style.css
@@ -302,6 +302,7 @@ header, footer, span, a, p, article {
 .single_article_content h1, .single_article_content h2, .single_article_content h3, .single_article_content h4 {
 	margin-bottom: 12px;
 	padding: 0 10px;
+	font-weight: 400;
 }
 
 /* top image */
