--- a/style.css
+++ b/style.css
@@ -303,6 +303,9 @@ header, footer, span, a, p, article {
 	padding: 0 10px;
 	font-weight: 400;
 }
+.single_article_content h4 {
+	font-size: 18px;
+}
 
 /* top image */
 .top_img_container {
