--- a/style.css
+++ b/style.css
@@ -636,6 +636,7 @@ header, footer, span, a, p, article {
 	}
 	.single_article_content h1, .single_article_content h2, .single_article_content h3, .single_article_content h4 {
 		padding: 0;
+		padding-bottom: 16px;
 	}
 	.single_article_content h4 {
 		font-size: 24px;
