--- a/style.css
+++ b/style.css
@@ -537,7 +537,7 @@ header, footer, span, a, p, article {
 	}
 	.index_article_title:hover {
 		text-decoration: none;
-		font-weight: 400;
+		opacity: 0.8;
 	}
 	.index_article_info {
 		padding: 0;
