--- a/style.css
+++ b/style.css
@@ -230,6 +230,7 @@ header, footer, span, a, p, article {
 	margin-bottom: 8px;
 	padding-bottom: 45%;
 }
+/**/
 .index_article_title {
 	display: block;
 	font-size: 20px;
