--- a/style.css
+++ b/style.css
@@ -527,13 +527,14 @@ header, footer, span, a, p, article {
 		width: 900px;
 		display: inline-block;
 		float: left;
-		height: 360px;
+		height: 340px;
 	}
 	.index_article_title {
 		padding: 0;
 		font-size: 24px;
 		line-height: 1.1;
 		margin-bottom: 8px;
+	    display: inline-block;
 	}
 	.index_article_title:hover {
 		text-decoration: none;
@@ -541,13 +542,15 @@ header, footer, span, a, p, article {
 	}
 	.index_article_info {
 		padding: 0;
+	    float: right;
+	    color: #999;
 	}
 	.index_article_info a {
 		font-size: 14px;
 	}
 	.index_article_thumb {
 		margin-bottom: 16px;
-		padding-bottom: 30%;
+		padding-bottom: 26%;
 	}
 	.index_article_thumb:hover {
 		opacity: 0.8;
