--- a/style.css
+++ b/style.css
@@ -553,6 +553,7 @@ header, footer, span, a, p, article {
 		padding-bottom: 28%;
 	}
 	.index_article_thumb:hover {
+		-webkit-transition: all 0.5s;
 		-webkit-filter: brightness(0.9);
 	}
 	#wp-load-more-btn {
