--- a/style.css
+++ b/style.css
@@ -551,9 +551,10 @@ header, footer, span, a, p, article {
 	.index_article_thumb {
 		margin-bottom: 12px;
 		padding-bottom: 28%;
+		-webkit-transition: all 0.5s;
 	}
 	.index_article_thumb:hover {
-		-webkit-transition: all 0.5s;
+		-webkit-filter:none;
 		-webkit-filter: brightness(0.9);
 	}
 	#wp-load-more-btn {
