--- a/style.css
+++ b/style.css
@@ -551,10 +551,11 @@ header, footer, span, a, p, article {
 		margin-bottom: 12px;
 		padding-bottom: 28%;
 		-webkit-transition: all 0.5s;
+		-webkit-filter: blur(3px);
 	}
 	.index_article_thumb:hover {
 		-webkit-filter:none;
-		-webkit-filter: brightness(0.8);
+		-webkit-filter: blur(0);
 	}
 	#wp-load-more-btn {
 		width: 36px;
