--- a/style.css
+++ b/style.css
@@ -546,6 +546,7 @@ header, footer, span, a, p, article {
 	}
 	.index_article_info a {
 		font-size: 14px;
+		color: #999;
 	}
 	.index_article_thumb {
 		margin-bottom: 12px;
