--- a/style.css
+++ b/style.css
@@ -547,6 +547,7 @@ header, footer, span, a, p, article {
 	.index_article_info a {
 		font-size: 14px;
 		color: #999;
+		margin-left: 6px;
 	}
 	.index_article_thumb {
 		margin-bottom: 12px;
