--- a/style.css
+++ b/style.css
@@ -602,10 +602,11 @@ header, footer, span, a, p, article {
 	.single_article_info {
 		padding: 0;
 		margin-bottom: 48px;
+		vertical-align: text-top;
 	}
 	.single_article_info li {
 		display: inline-block;
-		margin-right: 12px;
+		color: #999;
 	}
 	.bottom_nev .bottom_next .bottom_next_thumb, .bottom_nev .bottom_prev .bottom_prev_thumb {
 		width: 180px;
