--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ header, footer, span, a, p, article {
 .single_article_title {
 	padding: 0 10px;
 	display: block;
-	/*margin-bottom: 12px;*/
+	margin-bottom: 6px;
 }
 .single_article_title a {
 	font-size: 23px;
@@ -272,10 +272,12 @@ header, footer, span, a, p, article {
 	display: block;
 	margin-bottom: 22px;
 	line-height: 1;
+	color: #999;
 }
 .single_article_info a {
 	font-size: 12px;
 	color: #666;
+	vertical-align: 4px;
 }
 .single_article_content .alignleft, .single_article_content .aligncenter, .single_article_content .alignnone {
 	width: 100%;
