--- a/style.css
+++ b/style.css
@@ -476,6 +476,7 @@ header, footer, span, a, p, article {
 	.top_menu .widgettitle {
 		font-size: 14px;
   		font-weight: 400;
+  		display: none;
 	}
 	/* footer */
 	#footer {
