--- a/style.css
+++ b/style.css
@@ -561,7 +561,8 @@ header, footer, span, a, p, article {
 	}
 	.index_article_thumb:hover {
 		-webkit-filter:none;
-		-webkit-filter: brightness(0.80);
+		background-size: 1200px auto;
+		/*-webkit-filter: brightness(0.80);*/
 	}
 	#wp-load-more-btn {
 		width: 36px;
