--- a/style.css
+++ b/style.css
@@ -560,6 +560,7 @@ header, footer, span, a, p, article {
 		-webkit-transition: all 0.5s;
 	}
 	.index_article_thumb:hover {
+		-webkit-transition: all 0.5s;
 		-webkit-filter:none;
 		-webkit-background-size: 1200px auto;
 		/*-webkit-filter: brightness(0.80);*/
