--- a/style.css
+++ b/style.css
@@ -561,9 +561,8 @@ header, footer, span, a, p, article {
 	}
 	.index_article_thumb:hover {
 		-webkit-transition: all 0.5s;
-		-webkit-filter:none;
 		-webkit-background-size: 1200px auto;
-		/*-webkit-filter: brightness(0.80);*/
+		-webkit-filter: brightness(0.80);
 	}
 	#wp-load-more-btn {
 		width: 36px;
