--- a/style.css
+++ b/style.css
@@ -557,15 +557,14 @@ header, footer, span, a, p, article {
 	.index_article_thumb {
 		margin-bottom: 12px;
 		padding-bottom: 25%;
-		-webkit-transition: all 0.5s;
-	}
-	.index_article_thumb:hover {
 		transition: background-size 2s ease-in;
 		-moz-transition: background-size 2s ease-in;
 		-ms-transition: background-size 2s ease-in;
 		-o-transition: background-size 2s ease-in;
 		-webkit-transition: background-size 2s ease-in;
-		/**/
+		/*-webkit-transition: all 0.5s;*/
+	}
+	.index_article_thumb:hover {
 		-webkit-filter: brightness(0.80);
 		-webkit-transition: background-size 2s ease-in;
 		-webkit-background-size: 1200px auto;
