--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@ header, footer, span, a, p, article {
 	display: inline-block;
 	padding-right: 52px;
 	padding-bottom: 32px;
+    margin-left: 10px;
 }
 /* footer */
 #footer {
