--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@
   font-weight: 700;
   src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff");
 }
+@font-face {
+  font-family: "Noto Sans";
+  src: url("http://fonts.googleapis.com/css?family=Noto+Sans");
+}
 
 * {
 	padding: 0; margin: 0;
@@ -594,6 +598,7 @@ header, footer, span, a, p, article {
 	.single_article_content > p, .single_article_content > a {
     	font-size: 17px;
     	word-spacing: 1px;
+    	font-family: "Noto Sans"
 	}
 	.single_article_title {
 		margin-bottom: 8px;
