--- a/style.css
+++ b/style.css
@@ -604,7 +604,7 @@ header, footer, span, a, p, article {
     	font-weight: 200;
 	}
 	.single_article_title {
-		margin-bottom: 8px;
+		/*margin-bottom: 8px;*/
 	}
 	.single_article_title, .single_article_content > p, .single_article_content > a, .single_article_content .alignnone {
 		padding: 0;
