--- a/style.css
+++ b/style.css
@@ -38,9 +38,7 @@
   font-family: "Noto Sans";
   font-weight: normal;
   font-style: normal;
-/*  src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff2) format('woff2'),
-  url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff) format('woff'),
-  url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.otf) format('opentype');*/
+  src: url(http://api.mobilis.co.kr/webfonts/css/?fontface=NanumGothicWeb); );
 }
 
 * {
