--- a/style.css
+++ b/style.css
@@ -36,11 +36,18 @@
 }
 @font-face {
   font-family: "Noto Sans";
-  font-weight: normal;
-  font-style: normal;
-  src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff2) format('woff2'),
-  url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.woff) format('woff'),
-  url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Regular.otf) format('opentype');
+  font-weight: 100;
+  src: url("../fonts/NotoSansCJKkr-Light-2350.woff");
+}
+@font-face {
+  font-family: "Noto Sans";
+  font-weight: 200;
+  src: url("../fonts/NotoSansCJKkr-Regular-2350.woff");
+}
+@font-face {
+  font-family: "Noto Sans";
+  font-weight: 300;
+  src: url("../fonts/NotoSansCJKkr-Medium-2350.woff");
 }
 
 * {
