--- a/style.css
+++ b/style.css
@@ -37,17 +37,17 @@
 @font-face {
   font-family: "Noto Sans";
   font-weight: 100;
-  src: url("../fonts/NotoSansCJKkr-Light-2350.woff") format("woff");
+  src: url("./fonts/NotoSansCJKkr-Light-2350.woff") format("woff");
 }
 @font-face {
   font-family: "Noto Sans";
   font-weight: 200;
-  src: url("../fonts/NotoSansCJKkr-Regular-2350.woff") format("woff");
+  src: url("./fonts/NotoSansCJKkr-Regular-2350.woff") format("woff");
 }
 @font-face {
   font-family: "Noto Sans";
   font-weight: 300;
-  src: url("../fonts/NotoSansCJKkr-Medium-2350.woff") format("woff");
+  src: url("./fonts/NotoSansCJKkr-Medium-2350.woff") format("woff");
 }
 
 * {
