--- a/style.css
+++ b/style.css
@@ -607,7 +607,7 @@ header, footer, span, a, p, article {
 		padding-top: 36px;
 	}
 	#single_content {
-		padding-top: 200px;
+		padding-top: 186px;
 	}
 	.single_article_content > p, .single_article_content > a {
     	font-size: 15px;
@@ -616,7 +616,7 @@ header, footer, span, a, p, article {
     	font-weight: 200;
 	}
 	.single_article_title {
-		/*margin-bottom: 8px;*/
+		margin-bottom: 0;
 	}
 	.single_article_title, .single_article_content > p, .single_article_content > a, .single_article_content .alignnone {
 		padding: 0;
