--- a/style.css
+++ b/style.css
@@ -293,7 +293,7 @@ header, footer, span, a, p, article {
 	line-height: 1;
 	color: #999;
 	letter-spacing: -1px;
-	font-size: 12px;
+	/*font-size: 12px;*/
 }
 .single_article_info a {
 	font-size: 12px;
