--- a/style.css
+++ b/style.css
@@ -446,6 +446,11 @@ header, footer, span, a, p, article {
 		background-size: 140px 400px;
 		margin-top: 18px;
 	}
+	.menu_normal_white .blogTitle_content:hover {
+		-webkit-filter: invert(35%);
+		-moz-filter: invert(35%);
+		filter: invert(35%);
+	}
 	.menu_normal_white .menubtn_content {
 	    width: 34px;
 	    height: 34px;
@@ -453,6 +458,11 @@ header, footer, span, a, p, article {
 	    background-size: 140px 400px;
 	    float: right;
 	    margin-top: 14px;
+	}
+	.menu_normal_white .menubtn_content:hover {
+		-webkit-filter: invert(35%);
+		-moz-filter: invert(35%);
+		filter: invert(35%);
 	}
 	.menu_normal .blogTitle_content {
 		width: 36px;
